# open-monitor

./: .exec-helper  .gitignore  LICENSE  Readme.rst  default_config.lua  meson.build  meson_options.txt
crossfiles/: clang.ini.in  gcc.ini.in
example_configs/: meson.build  rpi_no_lighting.lua
init/: meson.build
init/systemd/: meson.build  open_monitor.service
src/: index.html.h  meson.build  open_monitor.cpp
