option('copyright', type: 'string', value: 'COPYRIGHT (c)', description: 'Set copyright message')
option('license-prefix', type: 'string', value: '/usr/share/open-monitor', description: 'The directory to install the license to')

option('systemd', type: 'feature', value: 'auto', description: 'Install the corresponding systemd service(s)')
option('systemd-install-directory', type: 'string', value: '/opt/systemd/system'
